SPM-1403: Return baseline details on baseline-update
